<resources>
    <string name="app_name">QuizGeneratorProject</string>
    <string name="sign_up_icon">Sign Up Icon</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="default_web_client_id">1:356147092117:android:87a07137f2d69eb8d7199c</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="what_do_you_want_to_ask">e.g. Physics 20 Practice Quiz and Notes</string>
    <string name="generate">Generate</string>
    <string name="notes">Notes</string>
    <string name="save_notes">Save Notes</string>
    <string name="quiz_questions">Quiz Questions</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="saved_quizzes">Saved Quizzes</string>
    <string name="saved_notes">Saved Notes</string>
    <string name="show_more">Show more</string>
</resources>